[package]
name = "rocketmq-client-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["rocketmq-client-sys"]

[dependencies]
rocketmq-client-sys = { path = "rocketmq-client-sys" }

thiserror = "1.0.28"
