[package]
name = "rocketmq-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "rocketmq-client-sys-autogen",
    "rocketmq-client-sys",
]

[dependencies]
rocketmq-client-sys-autogen = { path = "rocketmq-client-sys-autogen", optional = true }
rocketmq-client-sys = { path = "rocketmq-client-sys", optional = true }

thiserror = "1"
crossbeam-channel = "0.5"
once_cell = "1.8"

[features]
default = ["generated"]

generated = ["rocketmq-client-sys"]
autogen = ["rocketmq-client-sys-autogen"]
