[package]
name = "rocketmq-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "rocketmq-client-sys",
]

[dependencies]
rocketmq-client-sys = { path = "rocketmq-client-sys" }

thiserror = "1"
crossbeam-channel = "0.5"
once_cell = "1.8"

[features]
default = []

generate = ["rocketmq-client-sys/generate"]
musl-static = ["rocketmq-client-sys/musl-static"]
