[package]
name = "rocketmq-client-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = { version =  "0.59.1", optional = true }

[features]
default = []

generate = ["bindgen"]
musl-static = []
